--- a/henriquez-melissa-parcial_2/index.html
+++ b/henriquez-melissa-parcial_2/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <!-- Tienes que poner el link donde subas el proyec -->
-    <a href=""><img src="imagenes/github.png" class="github"></a>
+  
+    <a href="https://github.com/2022-SEMI-DESIX-G1/henriquez-melissa/tree/main/henriquez-melissa-parcial_2"><img src="imagenes/github.png" class="github"></a>
     <section id="pokemon-finder-section">
         <img src="imagenes/pokeapi_256.png" class="logo-pokeapi">
         <form id="pokemon-finder-form">
