--- a/henriquez-melissa-laboratorio5/index.html
+++ b/henriquez-melissa-laboratorio5/index.html
@@ -69,7 +69,7 @@
         .carta {
             display: flex;
             justify-content: center;
-            border: 1px solid grey;
+            border: 1px solid rgba(12, 2, 2, 0.247);
             background-color: white;
             padding: 0.8rem;
             margin: 0.5rem;
@@ -77,7 +77,6 @@
             min-height: auto;
             cursor: pointer;
             margin-top: 1rem;
-            border-radius: 3px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             transition: 0.3s;
         }
